--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -554,13 +554,18 @@
        {% endif %}
        $('a.reset').attr('href', '');
      });
-     // refresh score for current game (disregarding clickable elements)
+     // refresh score for current game (disregarding clickable elements)--note that the
+     // current game may change on this reload
      $('.game').on('click', function(e) {
-       console.log(".game click", this, e.target)
        if (chgMap.size == 0) {
-         const url = window.location.origin + window.location.pathname
-         const label = $('.games input[name="game_label"]').attr('value');
-         window.location.href = url + "?cur_game=" + label;
+         //const url = window.location.origin + window.location.pathname
+         //window.location.href = url;
+         //window.location.href = '';
+         // WATCH: this appears to reload changed data despite all of the claims that the
+         // `forceGet` flag is ignored these days; if we see that this is not reliable, we
+         // can fall back to setting location.href (I think the two commented out options
+         // are equivalent)!
+         window.location.reload(true);
        }
        else {
          showError("Cannot tap to reload game info if there are pending changes");
