--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -9,7 +9,7 @@
        font-size: 16px;
        font-size: 3.9vmin;
        /*font-size: calc(1.2vh + 1.2vw);*/
-       scroll-padding-top: 2.9rem;
+       /*scroll-padding-top: 2.8rem;*/
      }
      body {
        margin-top: 0.0rem;
@@ -33,7 +33,8 @@
        top: 0;
        width: 100%;
        font-size: 0.875rem;
-       margin: 0.3rem 0.0rem 0.3rem 0.0rem;
+       margin: 0.0rem 0.0rem;
+       padding: 0.2rem 0.0rem;
        background: rgb(255 255 255 / 1);
      }
      .header .goto {
@@ -158,6 +159,7 @@
      .pick {
        width: max-content;
        padding: 0.35rem 0.4rem 0.45rem 0.4rem;
+       border-bottom: 1px solid grey;
      }
      .pick form {
        display: inline-block;
@@ -195,10 +197,10 @@
      }
      .games article {
        padding: 0.2rem 0.4rem;
-       border-top: 1px solid black;
+       border-top: 1px solid grey;
      }
      .games article:last-child {
-       border-bottom: 1px solid black;
+       border-bottom: 1px solid grey;
      }
      .winner {
        color: #108810;
@@ -238,6 +240,26 @@
      }
      u {
        text-decoration: none;
+     }
+     .resources {
+       margin-top: 1.0rem;
+       font-size: normal;
+     }
+     .resources h3 {
+       display: inline-block;
+       margin-bottom: 0.8rem;
+     }
+     .resources span {
+       font-style: italic;
+       margin-left: 0.2rem;
+     }
+     .resources ul {
+       list-style-type: none;
+       padding: 0.0rem;
+       margin: 0.0rem;
+     }
+     .resources li + li {
+       margin: 1.0rem 0.0rem;
      }
     </style>
   </head>
@@ -473,6 +495,18 @@
       {% endif %}  {# partner_picks #}
     </section>
     {% endif %}  {# view == partners #}
+
+    {% if resources %}
+    <section class="resources">
+      <h3>Resources</h3>
+      <span>(not mobile friendly)</span>
+      <ul>
+        {% for rsrc in resources %}
+        <li><a href="{{rsrc[0]}}" target='_blank'>{{rsrc[1]}}</a></li>
+        {% endfor %}
+      </ul>
+    </section>
+    {% endif %}  {# resources #}
   </body>
 
   <script src="/static/jquery-3.7.1.min.js"></script>
