--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -248,6 +248,10 @@
      .active {
        background-color: #FFF8F0;
      }
+     .leaderboard .active {
+       font-weight: bolder;
+       background-color: #FFF8F0;
+     }
      h1 {
        font-size: 1.5rem;
      }
@@ -394,7 +398,7 @@
 
     {% if view == seeding or view == round_robin %}
     {% with %}
-    {% set stage_entity = team if view == round_robin else user %}
+    {% set stage_ent = team if view == round_robin else user %}
     <section class="games" id="sd-games">
       {% if stage_games %}
       <h3>Games</h3><span>(tap here for Leaderboard)</span>
@@ -407,7 +411,7 @@
         {% set gm_cls = " active" if gm == cur_game else ("" if gm.winner else " pending") %}
         <article class="game{{gm_cls}}" id="{{gm.label}}">
           <h4>Round {{gm.round_num}}</h4>
-          {% set matchup_str = fmt_matchup(gm, stage_entity) %}
+          {% set matchup_str = fmt_matchup(gm, stage_ent) %}
           <p class="matchup">
             {{matchup_str[0]|safe}}
           </p>
@@ -480,19 +484,20 @@
     {% if leaderboard %}
     <section class="leaderboard">
       <h3>Leaderboard</h3><span>(tap here for Games)</span>
-      {% set entity_hdr = "Team (by seed)" if view == round_robin else "Player (by num)" %}
+      {% set ent_hdr = "Team (by seed)" if view == round_robin else "Player (by num)" %}
       <p class="lb_hdr">
-        <span>{{entity_hdr}}</span>
+        <span>{{ent_hdr}}</span>
         <span>W-L</span>
         <span>PF-PA</span>
         <span>Rank</span>
       </p>
       {% for pos in leaderboard %}
-      <p>
-        <span>{{pos[0]|safe}}</span>
+      {% set pos_cls = "active" if stage_ent.id == pos[0] else "" %}
+      <p class="{{pos_cls}}">
         <span>{{pos[1]|safe}}</span>
         <span>{{pos[2]|safe}}</span>
         <span>{{pos[3]|safe}}</span>
+        <span>{{pos[4]|safe}}</span>
       </p>
       {% endfor %}
     </section>
