--- a/templates/login.html
+++ b/templates/login.html
@@ -34,7 +34,7 @@
   </head>
 
   <body>
-    <form action="/login" method="post" enctype="multipart/form-data">
+    <form action="/login" method="post">
       <h1>Login</h1>
       <section>
         <p>
