--- a/templates/tourn.html
+++ b/templates/tourn.html
@@ -87,30 +87,41 @@
       <div></div>
       <button autofocus>Close</button>
     </dialog>
-    <form action="/tourn" method="post" enctype="multipart/form-data">
+    <form action="/tourn" method="post">
+      <input type="hidden" name="submit_func" value="select_tourn">
       <div class="section">
         <span>Pick tournament:</span>
         <select name="tourn" class="sel_tourn" onchange="this.form.submit();">
+          {% set disabled = " disabled" if tourn_name == sel_sep else "" %}
+
           {% if new_tourn %}
           {% for tourn_name in tourn_sel %}
-          <option value="{{tourn_name}}"{{" selected" if tourn_name == sel_new else ""}}{{" disabled" if tourn_name == sel_sep else ""}}>{{tourn_name}}</option>
+          {% set selected = " selected" if tourn_name == sel_new else "" %}
+          <option value="{{tourn_name}}"{{selected}}{{disabled}}>{{tourn_name}}</option>
           {% endfor %}
+
           {% elif tourn %}
           {% for tourn_name in tourn_sel %}
-          <option value="{{tourn_name}}"{{" selected" if tourn_name == tourn.name else ""}}{{" disabled" if tourn_name == sel_sep else ""}}>{{tourn_name}}</option>
+          {% set selected = " selected" if tourn_name == tourn.name else "" %}
+          <option value="{{tourn_name}}"{{selected}}{{disabled}}>{{tourn_name}}</option>
           {% endfor %}
+
           {% else %}
-          <option value="" disabled selected></option>
+          <option value="" disabled selected hidden></option>
           {% for tourn_name in tourn_sel %}
-          <option value="{{tourn_name}}"{{" disabled" if tourn_name == sel_sep else ""}}>{{tourn_name}}</option>
+          <option value="{{tourn_name}}"{{disabled}}>{{tourn_name}}</option>
           {% endfor %}
           {% endif %}
         </select>
       </div>
-      {% if tourn %}
+    </form>
+    {% if tourn %}
+    <form action="/tourn" method="post" enctype="multipart/form-data">
+      {% set disabled = "" if new_tourn else " disabled" %}
+      <input type="hidden" name="id" value="{{tourn.id}}">
       <div class="container">
         <div class="section info">
-          <span class="section_lbl">New Tournament Info</span>
+          <span class="section_lbl">Tournament Info</span>
           <table class="tourn_params">
             <colgroup>
               <col class="pname">
@@ -119,19 +130,20 @@
             <tr>
               <td class="td_lbl">Name:</td>
               <td class="td_txt">
-                <input name="tourn_name" type="text" value="{{tourn.name if tourn.name else ''}}" placeholder="required (must be unique)" {{"required autofocus" if new_tourn else "readonly"}}>
+                {% set attrs = "required autofocus" if new_tourn else "readonly" %}
+                <input name="tourn_name" type="text" value="{{tourn.name or ''}}" placeholder="required (must be unique)" {{attrs}}>
               </td>
             </tr>
             <tr>
               <td class="td_lbl">Timeframe:</td>
               <td class="td_txt">
-                <input name="timeframe" type="text" value="{{tourn.timeframe if tourn.timeframe else ''}}">
+                <input name="timeframe" type="text" value="{{tourn.timeframe or ''}}"{{disabled}}>
               </td>
             </tr>
             <tr>
               <td class="td_lbl">Venue:</td>
               <td class="td_num">
-                <input name="venue" type="text" value="{{tourn.venue if tourn.venue else ''}}">
+                <input name="venue" type="text" value="{{tourn.venue or ''}}"{{disabled}}>
               </td>
             </tr>
             <tr>
@@ -155,27 +167,25 @@
             <tr>
               <td class="td_lbl">Roster File:</td>
               <td class="td_text">
-                <input name="roster_file" type="file" value="{{roster_file if roster_file else ''}}" accept=".csv">
+                {% set disabled = "" if new_tourn else " disabled" %}
+                <input name="roster_file" type="file" value="" accept=".csv"{{disabled}}>
               </td>
             </tr>
             <tr>
               <td class="td_lbl">Overwrite Existing:</td>
               <td>
-                <input type="checkbox" name="overwrite" value="yes"{{" checked" if overwrite else ""}}{{"" if new_tourn else " disabled"}}>
+                {% set checked = " checked" if overwrite else "" %}
+                <input type="checkbox" name="overwrite" value="yes"{{checked}}{{disabled}}>
               </td>
             </tr>
           </table>
         </div>
       </div>
       <div class="section actions">
-        {% if new_tourn %}
-        <button class="submit" value="{{buttons[0]}}"{{btn_attr[0]}}>{{btn_lbl[0]}}</button>
-        {% else %}
         <button class="submit" value="{{buttons[1]}}"{{btn_attr[1]}}>{{btn_lbl[1]}}</button>
-        {% endif %}
       </div>
-      {% endif %}  {# tourn #}
     </form>
+    {% endif %}  {# tourn #}
   </body>
 
   <script src="/static/jquery-3.7.1.min.js"></script>
