rename "timeframe" to "dates", change cursor for clickable elements (including nav shortcuts)

--- a/templates/app.html
+++ b/templates/app.html
@@ -47,6 +47,7 @@
      .tourn_lbl {
        font-size: x-large;
        font-weight: bold;
+       cursor: pointer;
      }
      .login_info {
        float: right;
@@ -57,6 +58,7 @@
      .login_info span {
        font-weight: bolder;
        color: mediumblue;
+       cursor: pointer;
      }
      .subsect {
        margin-top: 0.5rem;
